--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,5 @@ version = "0.5.0-rc.2"
 features = ["json"]
 
 [dependencies]
-once_cell = "1.16.0"
+indoc = "1.0.8"
 rusqlite = { version = "0.28.0", features = ["bundled"] }
