--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ features = ["json"]
 [dependencies]
 indoc = "1.0.8"
 rusqlite = { version = "0.28.0", features = ["bundled"] }
+
+[workspace]
+members = [
+    "bepitone_discord"
+]
