--- a/bepitone_discord/Cargo.toml
+++ b/bepitone_discord/Cargo.toml
@@ -11,3 +11,6 @@ tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
 hyper = "0.14.23"
 serde = "1.0.152"
 serde_json = "1.0.91"
+rusqlite = { version = "0.28.0", features = ["bundled"] }
+png = "0.17.7"
+futures = "0.3.25"
