--- a/bepitone_discord/Cargo.toml
+++ b/bepitone_discord/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 serenity = "0.11"
-tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.21.2", features = ["macros", "rt", "rt-multi-thread"] }
 hyper = "0.14.23"
 serde = "1.0.152"
 serde_json = "1.0.91"
